<resources>
    <string name="app_name">WilApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_volunteer">Volunteer</string>
    <string name="menu_donation">Donations</string>
    <string name="menu_event">Events</string>
    <string name="menu_oursocials">Our Socials</string>

</resources>